--- a/.github/workflows/workflows.yaml
+++ b/.github/workflows/workflows.yaml
@@ -10,31 +10,35 @@ on:
 jobs:
   terraform:
     runs-on: ubuntu-latest
+    
     env:
       AWS_REGION: ap-northeast-2
-
+    
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v2
 
     - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v2
+      uses: aws-actions/configure-aws-credentials@v1
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ env.AWS_REGION }}
 
     - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v2
-
-    - name: Create SSH key file
-      run: echo "${{ secrets.SSH_PUBLIC_KEY }}" > terra-key.pub
+      uses: hashicorp/setup-terraform@v1
 
     - name: Terraform Init
       run: terraform init
 
     - name: Terraform Plan
       run: terraform plan
+      
+    - name: Terraform Destroy
+      run: terraform destroy -auto-approve
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
     - name: Terraform Apply
       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
