--- a/.github/workflows/workflows.yaml
+++ b/.github/workflows/workflows.yaml
@@ -29,17 +29,12 @@ jobs:
       - name: Terraform Init
         run: terraform init
 
-      - name: Terraform Plan
-        id: plan
-        run: terraform plan -detailed-exitcode
-        continue-on-error: true
+      - name: Terraform Plan Destroy
+        run: terraform plan -destroy -out=destroy.tfplan
 
       - name: Terraform Destroy
-        if: steps.plan.outputs.exitcode == 2
-        run: terraform destroy -auto-approve
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        run: terraform apply -auto-approve destroy.tfplan
 
       - name: Terraform Apply
         run: terraform apply -auto-approve
