--- a/.github/workflows/workflows.yaml
+++ b/.github/workflows/workflows.yaml
@@ -1,61 +1,62 @@
-name: Terraform Apply
+name: Deploy to AWS
 
 on:
   push:
     branches:
       - main
     paths:
-      - '**.tf'
+      - 'Dockerfile'
+      - '.github/workflows/deploy.yml'
+      - 'main.tf'
+      - '**/*.tf'
 
 jobs:
-  terraform:
+  build-and-deploy:
     runs-on: ubuntu-latest
+
     env:
       AWS_REGION: ap-northeast-2
+      ECR_REPOSITORY: ${{ secrets.ECR_REPOSITORY }}
+      ECS_CLUSTER: ${{ secrets.ECS_CLUSTER }}
+      ECS_SERVICE: ${{ secrets.ECS_SERVICE }}
+      ECS_TASK_DEFINITION: ${{ secrets.ECS_TASK_DEFINITION }}
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - name: Checkout code
+      uses: actions/checkout@v2
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v1
 
-      - name: Setup Terraform
-        uses: hashicorp/setup-terraform@v1
+    - name: Log in to Amazon ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v1
+      with:
+        region: ${{ env.AWS_REGION }}
 
-      - name: Create SSH public key file
-        run: echo "${{ secrets.TERRA_PUBLIC_KEY }}" > terra-key.pub
+    - name: Build and push Docker image to ECR
+      id: build-and-push
+      env:
+        IMAGE_TAG: ${{ github.sha }}
+      run: |
+        docker build -t ${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }} .
+        docker tag ${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }} ${{ env.ECR_REPOSITORY }}:latest
+        docker push ${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
+        docker push ${{ env.ECR_REPOSITORY }}:latest
 
-      - name: Terraform Init
-        run: terraform init
+    - name: Update ECS service with new image
+      id: update-ecs-service
+      run: |
+        TASK_DEFINITION=$(aws ecs describe-task-definition --task-definition ${{ env.ECS_TASK_DEFINITION }})
+        NEW_TASK_DEF=$(echo $TASK_DEFINITION | jq --arg IMAGE "$ECR_REPOSITORY:latest" '.taskDefinition | .containerDefinitions[0].image = $IMAGE | del(.taskDefinitionArn, .requiresAttributes, .revision, .status, .registeredBy, .registeredAt)')
+        NEW_TASK_DEF_JSON=$(echo $NEW_TASK_DEF | jq -R . | jq -s .)
+        NEW_TASK_DEF_ARN=$(aws ecs register-task-definition --cli-input-json $NEW_TASK_DEF_JSON | jq -r '.taskDefinition.taskDefinitionArn')
+        aws ecs update-service --cluster ${{ env.ECS_CLUSTER }} --service ${{ env.ECS_SERVICE }} --task-definition $NEW_TASK_DEF_ARN
 
-      - name: Terraform Plan
-        run: terraform plan
-
-      - name: Terraform Destroy
-        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: terraform destroy -auto-approve
-
-      - name: Terraform Apply
-        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: terraform apply -auto-approve
-
-      - name: Update AMI ID
-        run: |
-          UBUNTU_AMI=$(aws ec2 describe-images \
-            --owners 099720109477 \
-            --filters "Name=name,Values=ubuntu/images/hvm-ssd/ubuntu-jammy-22.04-amd64-server-*" \
-            "Name=state,Values=available" \
-            --query "sort_by(Images, &CreationDate)[-1].ImageId" \
-            --output text)
-          sed -i 's/ami-[a-z0-9]*/'"$UBUNTU_AMI"'/' *.tf
-
-      - name: Commit AMI ID update
-        run: |
-          git config --global user.name 'GitHub Actions'
-          git config --global user.email 'actions@github.com'
-          git commit -am "Update AMI ID" || echo "No changes to commit"
-          git push
+    - name: Run Terraform
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      run: |
+        terraform init
+        terraform apply -auto-approve
