--- a/.github/workflows/ecr-push.yaml
+++ b/.github/workflows/ecr-push.yaml
@@ -1,16 +1,14 @@
-name: Push to ECR
+name: Update and Apply Image Changes
 
 on:
   push:
-    branches:
-      - main
     paths:
       - 'image.tf'
 
 jobs:
-  push_to_ecr:
+  update-and-apply:
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
@@ -22,30 +20,15 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ap-northeast-2
 
-    - name: Login to Amazon ECR
-      id: login-ecr
-      uses: aws-actions/amazon-ecr-login@v1
+    - name: Setup Terraform
+      uses: hashicorp/setup-terraform@v1
 
-    - name: Build, tag, and push Django image to Amazon ECR
-      env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: django-app-repo
-        IMAGE_TAG: ${{ github.sha }}
-      run: |
-        docker pull wangamy/ttopia-re:latest
-        docker tag wangamy/ttopia-re:latest $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+    - name: Terraform Init
+      run: terraform init
 
-    - name: Build, tag, and push Nginx image to Amazon ECR
-      env:
-        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: nginx-repo
-        IMAGE_TAG: ${{ github.sha }}
-      run: |
-        docker pull nginx:latest
-        docker tag nginx:latest $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+    - name: Terraform Apply
+      run: terraform apply -auto-approve -target=null_resource.push_django_image -target=null_resource.force_ecs_deployment
 
-    - name: Update ECS service
+    - name: Verify ECS Service Update
       run: |
-        aws ecs update-service --cluster main-cluster --service app-service --force-new-deployment
+        aws ecs describe-services --cluster ${{ secrets.ECS_CLUSTER_NAME }} --services ${{ secrets.ECS_SERVICE_NAME }} --query 'services[0].deployments' --output json
