--- a/.github/workflows/ecr-push.yaml
+++ b/.github/workflows/ecr-push.yaml
@@ -1,6 +1,5 @@
 name: Update ECR Image
 
-#
 on:
   push:
     paths:
@@ -28,12 +27,6 @@ jobs:
       working-directory: ./image_update
       run: terraform init
 
-    - name: Terraform Apply Image Changes
-      run: |
-        terraform apply -auto-approve \
-          -target=null_resource.push_django_image \
-          -target=null_resource.force_ecs_deployment
-
-    - name: Verify ECS Service Update
-      run: |
-        aws ecs describe-services --cluster ${{ secrets.ECS_CLUSTER_NAME }} --services ${{ secrets.ECS_SERVICE_NAME }} --query 'services[0].deployments' --output json
+    - name: Terraform Apply
+      working-directory: ./image_update
+      run: terraform apply -auto-approve
