--- a/.github/workflows/ecr-push.yaml
+++ b/.github/workflows/ecr-push.yaml
@@ -31,7 +31,7 @@ jobs:
     - name: Build and push Nginx image to ECR
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: tickettopia-nginx
+        ECR_REPOSITORY: nginx-repo
         IMAGE_TAG: latest
       run: |
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG ./nginx
@@ -43,7 +43,7 @@ jobs:
     - name: Build and push Django app image to ECR
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: tickettopia-django-app
+        ECR_REPOSITORY: django-app-repo
         IMAGE_TAG: latest
       run: |
         docker build \
